--- a/less/style.less
+++ b/less/style.less
@@ -445,7 +445,7 @@ textarea {
 	letter-spacing: 1px;
 	line-height: @base-line-height * 2;
 	margin-bottom: 0;
-	margin-top: @base-line-height;
+	margin: @base-line-height 0;
 	text-transform: uppercase;
 	
 	a {
@@ -818,5 +818,16 @@ textarea {
 		top: 50%;
 		transform: translateY( -50% );
 		width: 100%;
+	}
+}
+
+//
+//	No sidebar page template styles
+//	----------------------------------------------------------------------------
+.page-template-no-sidebar, .xprt-no-sidebar {
+	#main {
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
