--- a/style.css
+++ b/style.css
@@ -766,7 +766,7 @@ textarea {
   letter-spacing: 1px;
   line-height: 50px;
   margin-bottom: 0;
-  margin-top: 25px;
+  margin: 25px 0;
   text-transform: uppercase;
 }
 .site-title a {
@@ -1073,4 +1073,10 @@ textarea {
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
+}
+.page-template-no-sidebar #main,
+.xprt-no-sidebar #main {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
 }
