Fixed issues with custom logo

--- a/less/style.less
+++ b/less/style.less
@@ -480,6 +480,14 @@ textarea {
 	margin-bottom: @base-line-height !important;
 }
 
+.custom-logo-link {
+	border: 0;
+	
+	.custom-logo {
+		display: block;
+	}
+}
+
 //
 //	Header CTA styles
 //	----------------------------------------------------------------------------
