--- a/style.css
+++ b/style.css
@@ -678,6 +678,7 @@ input[type=submit] {
   border: 0;
   color: white;
   cursor: pointer;
+  display: inline-block;
   font-size: 14px;
   letter-spacing: 1px;
   margin-bottom: 0;
@@ -688,6 +689,11 @@ input[type=submit] {
 }
 input[type=submit]:hover {
   background-color: #d93758;
+}
+input[type=checkbox],
+input[type=radio] {
+  display: inline-block;
+  width: auto;
 }
 label {
   font-size: 14px;
@@ -714,6 +720,7 @@ textarea {
 }
 .button:hover {
   background-color: #d93758;
+  color: white;
 }
 .aligncenter {
   display: block;
@@ -1128,10 +1135,59 @@ textarea {
 }
 .featured-post .more-link:hover {
   background-color: #d93758;
+  color: white;
 }
 .page-template-no-sidebar #main,
 .xprt-no-sidebar #main {
   float: none;
   margin-left: auto;
   margin-right: auto;
+}
+.wpcf7 {
+  background-color: #f6f6f6;
+  border: solid 1px #eeeeee;
+  padding: 25px !important;
+}
+.wpcf7 .wpcf7-not-valid-tip {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+.wpcf7 .wpcf7-not-valid-tip:focus {
+  background-color: #f1f1f1;
+  border-radius: 3px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  color: #21759b;
+  display: block;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: bold;
+  height: auto;
+  left: 5px;
+  line-height: normal;
+  padding: 15px 23px 14px;
+  text-decoration: none;
+  top: 5px;
+  width: auto;
+  z-index: 100000;
+  /* Above WP toolbar. */
+}
+.wpcf7 .wpcf7-not-valid {
+  border-color: red;
+}
+.wpcf7 .ajax-loader {
+  margin-left: 10px;
+}
+.wpcf7 .wpcf7-response-output {
+  border: solid 1px red !important;
+  color: red;
+  margin-left: 0 !important;
+  padding: 12.5px 25px;
+}
+.wpcf7 .wpcf7-response-output.wpcf7-mail-sent-ok {
+  border-color: #398f14 !important;
+  color: #398f14 !important;
 }
